force-app/main/default/objects/Setting_Endpoint__mdt/Setting_Endpoint__mdt.object-meta.xml
<CustomObject>
    <label>Setting Endpoint</label>
    <pluralLabel>Setting Endpoint</pluralLabel>
</CustomObject>