force-app/main/default/objects/Setting_Endpoint__mdt/fields/URL_Case_Post__c.field-meta.xml
<CustomField>
    <fullName>URL_Case_Post__c</fullName>
    <label>URL Case Post</label>
    <type>Url</type>
</CustomField>