force-app/main/default/objects/Setting_Endpoint__mdt/fields/URL_Get__c.field-meta.xml
<CustomField>
    <fullName>URL_Get__c</fullName>
    <label>URL Get</label>
    <type>Url</type>
</CustomField>